String changes for dmenu -> fmenu rename.

--- a/README
+++ b/README
@@ -1,24 +1,24 @@
-dmenu - dynamic menu
-====================
-dmenu is a generic and efficient menu for X. 
+fmenu - fast menu
+=================
+fmenu is a generic and efficient menu for X. 
 
 
 Requirements
 ------------
-In order to build dmenu you need the Xlib header files.
+In order to build fmenu you need the Xlib header files.
 
 
 Installation
 ------------
-Edit config.mk to match your local setup (dmenu is installed into
+Edit config.mk to match your local setup (fmenu is installed into
 the /usr/local namespace by default).
 
-Afterwards enter the following command to build and install dmenu (if
+Afterwards enter the following command to build and install fmenu (if
 necessary as root):
 
     make clean install
 
 
-Running dmenu
+Running fmenu
 -------------
 See the man page for details.
