--- a/dmenu.1
+++ b/dmenu.1
@@ -1,8 +1,8 @@
-.TH DMENU 1 dmenu\-VERSION
+.TH FMENU 1 fmenu\-VERSION
 .SH NAME
-dmenu \- dynamic menu
+fmenu \- fast menu
 .SH SYNOPSIS
-.B dmenu
+.B fmenu
 .RB [ \-i ]
 .RB [ \-b ]
 .RB [ \-l " <lines>"]
@@ -15,17 +15,19 @@ dmenu \- dynamic menu
 .RB [ \-v ]
 .SH DESCRIPTION
 .SS Overview
-dmenu is a generic menu for X, originally designed for
-.BR dwm (1).
-It manages huge amounts (up to 10.000 and more) of user defined menu items
-efficiently.
+fmenu is a generic menu for X, based on
+.BR dmenu (1).
+Since it includes some features that do not comply to dmenu's minimalistic
+approach, it has been forked.
+Like dmenu, it manages huge amounts (up to 10.000 and more) of user defined
+menu items efficiently.
 .SS Options
 .TP
 .B \-i
-makes dmenu match menu entries case insensitively.
+makes fmenu match menu entries case insensitively.
 .TP
 .B \-b
-defines that dmenu appears at the bottom.
+defines that fmenu appears at the bottom.
 .TP
 .B \-l <lines>
 activates vertical list mode.
@@ -52,11 +54,11 @@ defines the selected foreground color (#RGB, #RRGGBB, and color names are suppor
 .B \-v
 prints version information to standard output, then exits.
 .SH USAGE
-dmenu reads a list of newline-separated items from standard input and creates a
+fmenu reads a list of newline-separated items from standard input and creates a
 menu.  When the user selects an item or enters any text and presses Return, his/her
-choice is printed to standard output and dmenu terminates.
+choice is printed to standard output and fmenu terminates.
 .P
-dmenu is completely controlled by the keyboard. The following keys are recognized:
+fmenu is completely controlled by the keyboard. The following keys are recognized:
 .TP
 .B Any printable character
 Appends the character to the text in the input field.  This works as a filter:
@@ -99,5 +101,6 @@ Remove all characters from the input field.
 .B Control\-w
 Remove all characters of current word from the input field.
 .SH SEE ALSO
+.BR dmenu (1),
 .BR dwm (1),
 .BR wmii (1) .
